# google_pigweed

./: .bazelrc  MODULE.bazel  PIGWEED_MODULES  workflows.json
docs/sphinx/: BUILD.bazel  module_metadata.json  third_party_support.rst
docs/sphinx/os/zephyr/: index.rst
pw_allocator/: Android.bp  BUILD.bazel  BUILD.gn  CMakeLists.txt  allocator.cc  fallback_allocator.cc  fallback_allocator_test.cc  fragmentation.cc  fragmentation_test.cc  guide.rst  layout_test.cc  tracking_allocator_test.cc
pw_allocator/benchmarks/: benchmark_test.cc
pw_allocator/examples/public/examples/: custom_allocator.h
pw_allocator/public/pw_allocator/: abstract_allocator.h  allocator.h  allocator_as_pool.h  async_pool.h  best_fit.h  block_allocator.h  block_allocator_testing.h  buddy_allocator.h  bump_allocator.h  chunk_pool.h  deallocator.h  fallback_allocator.h  fault_injecting_allocator.h  first_fit.h  fragmentation.h  freertos_allocator.h  guarded_allocator.h  layout.h  libc_allocator.h  null_allocator.h  pool.h  shared_ptr.h  synchronized_allocator.h  testing.h  tracking_allocator.h  typed_pool.h  unique_ptr.h  worst_fit.h
pw_allocator/public/pw_allocator/internal/: managed_ptr.h
pw_allocator/size_report/: size_report.cc
pw_allocator_zephyr/: BUILD.bazel  docs.rst  heap_allocator_test.cc  synchronized_heap_allocator.cc  system_heap_allocator.cc
pw_allocator_zephyr/public/pw_allocator_zephyr/: synchronized_heap_allocator.h  system_heap_allocator.h
pw_async2/: BUILD.bazel  BUILD.gn  CMakeLists.txt  box_test.cc  docs.rst  transform_test.cc  why.rst
pw_async2/codelab/: BUILD.bazel
pw_async2/codelab/step3/: docs.rst
pw_async2/codelab/step3/checkpoint2/: vending_machine.h
pw_async2/codelab/step3/checkpoint3/: vending_machine.h
pw_async2/codelab/step3/checkpoint4/: vending_machine.h
pw_async2/examples/: BUILD.bazel  motivation.cc
pw_async2/public/pw_async2/: transform.h
pw_bluetooth_proxy/: BUILD.gn  CMakeLists.txt  acl_data_channel.cc  bt-proxy.bzl  dynamic_credit_sharing_test.cc  l2cap_channel_manager.cc  l2cap_channel_manager_async.cc  l2cap_channel_manager_sync.cc  l2cap_coc_test.cc  proxy_host.cc  proxy_host_test.cc
pw_bluetooth_proxy/gatt/: gatt_integration_test.cc
pw_bluetooth_proxy/hci/: BUILD.bazel  BUILD.gn  CMakeLists.txt  command_multiplexer.cc
pw_bluetooth_proxy/public/pw_bluetooth_proxy/: proxy_host.h
pw_bluetooth_proxy/public/pw_bluetooth_proxy/internal/: acl_data_channel.h  l2cap_channel_manager.h  l2cap_logical_link.h
pw_bluetooth_sapphire/: fuchsia.rst
pw_build/: cmake.rst  generated_pigweed_modules_lists.gni  pigweed.cmake
pw_build/py/pw_build/: project_builder_presubmit_runner.py
pw_chrono/: system_timer_facade_test.cc
pw_chrono_embos/: system_timer.cc
pw_chrono_freertos/: system_timer.cc
pw_chrono_zephyr/: system_timer.cc
pw_cli/py/: BUILD.bazel  file_filter_test.py  git_repo_test.py
pw_cli/py/pw_cli/: collect_files.py  color.py  file_filter.py  git_repo.py  log.py
pw_env_setup/py/pw_env_setup/cipd_setup/: pigweed.json
pw_flatbuffers/: flatbuffers.cmake
pw_function/: BUILD.bazel  BUILD.gn  CMakeLists.txt  docs.rst  function_ref_test.cc
pw_function/public/pw_function/: function_ref.h
pw_ide/bazel/compile_commands/: pw_cc_compile_commands_aspect.bzl
pw_ide/py/: BUILD.bazel
pw_kernel/arch/arm_cortex_m/: BUILD.bazel  exceptions.rs  syscall.rs  threads.rs
pw_kernel/arch/riscv/: exceptions.rs  syscall.rs  threads.rs  veer_pic.rs
pw_kernel/kernel/: interrupt_controller.rs  object.rs  scheduler.rs  syscall.rs
pw_kernel/kernel/object/: channel.rs  interrupt.rs  process.rs  thread.rs
pw_kernel/kernel/scheduler/: thread.rs
pw_kernel/syscall/: syscall_defs.rs
pw_kernel/syscall/syscall_user/: arm_cortex_m.rs  host.rs  riscv.rs
pw_kernel/userspace/: syscall.rs  time.rs
pw_malloc_freertos/: BUILD.bazel  BUILD.gn
pw_malloc_freertos/public/pw_malloc_freertos/: allocator.h
pw_multibuf/: BUILD.bazel  BUILD.gn  CMakeLists.txt  backend.cmake  backend.gni  design.rst
pw_multibuf/examples/: BUILD.bazel
pw_multibuf/public/pw_multibuf/: allocator.h  chunk.h  config.h  from_span.h  header_chunk_region_tracker.h  multibuf.h  observer.h  simple_allocator.h  simple_allocator_for_test.h  single_chunk_region_tracker.h
pw_multibuf/size_report/: BUILD.bazel
pw_multibuf/v1/: BUILD.bazel  BUILD.gn  CMakeLists.txt  allocator_async_test.cc  chunk_test.cc  header_chunk_region_tracker_test.cc  multibuf_test.cc
pw_multibuf/v1/private/pw_multibuf_private/: chunk_testing.h
pw_multibuf/v1/public/pw_multibuf/v1/: from_span.h  simple_allocator.h
pw_multibuf/v1/public_overrides/pw_multibuf_backend/: allocator.h  allocator_async.h  chunk.h  from_span.h  header_chunk_region_tracker.h  multibuf.h  observer.h  simple_allocator.h  single_chunk_region_tracker.h
pw_multibuf/v1_adapter/: BUILD.bazel  BUILD.gn  CMakeLists.txt
pw_multibuf/v1_adapter/private/pw_multibuf_private/: chunk_testing.h  multibuf_testing.h
pw_multibuf/v1_adapter/public/pw_multibuf/v1_adapter/: from_span.h  multibuf.h
pw_multibuf/v2/: BUILD.bazel  BUILD.gn  CMakeLists.txt  multibuf_nc_test.cc  multibuf_test.cc
pw_multibuf/v2/private/pw_multibuf_private/: multibuf_testing.h
pw_multibuf/v2/public_overrides/pw_multibuf_backend/: allocator.h  allocator_async.h  chunk.h  from_span.h  header_chunk_region_tracker.h  multibuf.h  observer.h  simple_allocator.h  single_chunk_region_tracker.h
pw_presubmit/: docs.rst
pw_presubmit/py/: BUILD.bazel  BUILD.gn  bazel_checks_test.py  examples.py  orchestrator_test.py  presubmit_test.py  step_test.py  v2_cli_test.py
pw_presubmit/py/pw_presubmit/: cli.py  keep_sorted.py  presubmit.py  presubmit_context.py  v2.py
pw_protobuf/: encoder.cc
pw_protobuf/public/pw_protobuf/: encoder.h
pw_rpc/: BUILD.bazel
pw_thread_freertos/: snapshot.cc  util.cc
pw_thread_freertos/public/pw_thread_freertos/: util.h
pw_toolchain/host_clang/: toolchain.cmake
pw_toolchain/host_gcc/: toolchain.cmake
zephyr/: pw_smoke_tests.bzl
zephyr/config/: pw_zephyr_config.bzl
zephyr/config/stubs/: stub_cc_test.bzl
(+36 files in other folders)
